# iza-os-core

./: .gitignore  Dockerfile  Makefile  README.md  alignment_categories.json  alignment_nodes.json  architecture_blueprint_results.json  chaos_engineering_results.json  consolidation_execution_results.json  dependency_graph_results.json  deploy.sh  docker-compose.yml  env.development  env.example  logging-config.json  master_execution_results.json  requirements.txt  setup_iza_os.sh  setup_results.json  technology_stack_results.json
00-meta/registry/: repos.json  (+1 more)
30-models/: llm_manager.py
40-mcp-agents/mcp-clients/iza-os-orchestrator/: README.md  pyproject.toml
40-mcp-agents/mcp-clients/iza-os-orchestrator/src/: core.py
genix-bank/: BankDashboard.tsx  MVPUI.tsx  OperationsUI.tsx
migrated_functionality/: MIGRATION_LOG.md
platform-integration/: ActivepiecesUI.tsx  N8NUI.tsx
schemas/: memu_ecosystem.json
src/: __init__.py  cli.py  main.py
super_design_dashboards/: Dockerfile  Makefile  dashboard-data.json  dashboard-monitoring-integration.js  dashboard-script.js  dashboard-styles.css  ecosystem-health-monitoring.js  env.example  index.html  integrate-search.js  modern-search-implementation.js  monitoring-config.json  nlp-processing-integration.js  package-lock.json  package-react.json  package-scripts.json  package-unified.json  package.json  security-config.json  server.js  test-suite.js  tsconfig.json  vite-unified.config.ts  vite.config.ts  vitest.config.ts
worldwidebro-integration/: IntegrationWorkflowUI.tsx  OperationsUI.tsx  RepositoryUI.tsx
(+82 files in other folders)
