[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iza-os-orchestrator"
version = "1.0.0"
description = "IZA OS Orchestrator - The Core Brain"
authors = [{name = "IZA OS Team", email = "team@iza-os.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "anthropic>=0.7.0",
    "openai>=1.0.0",
    "qdrant-client>=1.6.0",
    "neo4j>=5.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pyyaml>=6.0.0",
    "prometheus-client>=0.17.0",
    "redis>=4.5.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
